<resources>
    <string name="app_name">week3</string>
    <!-- หน้า1-->
    <string name="tv_header1">กรุณากรอกข้อมูล</string>
    <string name="tv_fname">ชื่อ</string>
    <string name="tv_lname">นามสกุล</string>
    <string name="tv_nname">ชื่อเล่น</string>
    <string name="tv_age">อายุ</string>
    <string name="tv_tel">เบอร์โทร</string>

    <string name="btn_sender">ส่งข้อมูล</string>
    <string name="btn_clear">ล้างข้อมูล</string>
    <string name="btn_close_app">ปิด</string>

    <!-- หน้า2-->
    <string name="tv_header2">ผลลัพธ์</string>
    <string name="btn_back">กลับ</string>
</resources>
